examples/bad/auto_return2.latf
auto f() {
    if (true) {
        return 1;
    }
    else {}
    // error - it's possible (without knowing the bool condition values) that the function with auto return type returns nothing
}

int main() {
    return 0;
}